--- a/web/Views/Nastavitve/Edit.cshtml
+++ b/web/Views/Nastavitve/Edit.cshtml
@@ -1,7 +1,7 @@
 @model web.Models.Nastavitve
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Settings";
 }
 
 @{
@@ -9,11 +9,10 @@
 }
 
 <input type="hidden" id="saved-theme" value="@ViewBag.mode" />
-
-<h1>Edit</h1>
-
-<h4>Nastavitve</h4>
+<br />
+<h1>Settings</h1>
 <hr />
+<br />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -21,12 +20,11 @@
             <input type="hidden" name="CurrentCurrencySelected"
                 value="@ViewBag.SavedCurrency.CurrentCurrencySelected" />
             <input type="hidden" asp-for="Id" />
-            <div class="form-group form-check">
+            @*             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDarkMode" /> @Html.DisplayNameFor(model =>
-                    model.IsDarkMode)
+                    <input class="form-check-input" asp-for="IsDarkMode" /> Dark mode
                 </label>
-            </div>
+            </div> *@
             @*             <div class="form-group">
                 <label asp-for="CurrentCurrencySelected" class="control-label"></label>
                 <input asp-for="CurrentCurrencySelected" class="form-control" />
@@ -34,7 +32,7 @@
             </div> *@
             <div class="dropdown">
                 <div class="form-group">
-                    <label asp-for="CurrentCurrencySelected" class="control-label"></label>
+                    <label asp-for="CurrentCurrencySelected" class="control-label">Currency</label>
                     <input type="text" class="search-bar" id="searchInput"
                         placeholder="@ViewBag.SavedCurrency.CurrentCurrencySelected" onkeyup="filterOptions()">
                     <div class="options-list" id="cryptoSelect" name="CurrentCurrencySelected" required>
@@ -45,8 +43,21 @@
                     </div>
                 </div>
             </div>
+            <br />
+            <div class='toggle-switch'>
+                <label id="switcher_label">
+                    <input type='checkbox' id="switcher_input" asp-for="IsDarkMode">
+                    <span class='slider'></span>
+                </label>
+            </div>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" id="nastavitve_save_button" value="Save" class="btn" />
             </div>
         </form>
     </div>
@@ -101,7 +112,24 @@
 
         // Apply the initial theme based on the value of the hidden input
         const applyTheme = (theme) => {
+            const navbarTheme = document.getElementById("navbar");
+            const navbar_titleTheme = document.getElementById("navbar_title");
+            const partial_footerTheme = document.getElementById("partial_footer");
+            const nav_linkTheme = document.getElementsByClassName("nav-link2");
+            const navbar_gearTheme = document.getElementById("navbar_gear");
+            if (theme == "dark") {
+                navbar_gearTheme.setAttribute("fill", "#f5acc6");
+            }
+            else {
+                navbar_gearTheme.setAttribute("fill", "#392d31");
+            }
             document.body.className = theme === "dark" ? "dark-mode" : "light-mode";
+            navbarTheme.className = theme === "dark" ? "dark-mode" : "light-mode";
+            partial_footerTheme.classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            navbar_titleTheme.classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            for (let i = 0; i < nav_linkTheme.length; i++) {
+                nav_linkTheme[i].classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            }
         };
 
         // Initialize theme on page load
