--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Kripto Beležka</title>
+    <title>@ViewData["Title"] - KriptoBeležka</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header id="navbar" class="light-mode">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Kripto Beležka</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"
+                    id="navbar_title">KriptoBeležka</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,12 +25,10 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Portfolio"
-                                asp-action="Index">Portfolio</a>
+                            <a class="nav-link2" asp-area="" asp-controller="Portfolio" asp-action="Index">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Watchlist"
-                                asp-action="Index">Watchlist</a>
+                            <a class="nav-link2" asp-area="" asp-controller="Watchlist" asp-action="Index">Watchlist</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -44,9 +43,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" id="partial_footer">
         <div class="container">
-            &copy; 2024 - Kripto Beležka
+            &copy; 2024 - KriptoBeležka
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
