--- a/web/Views/Watchlist/Index.cshtml
+++ b/web/Views/Watchlist/Index.cshtml
@@ -46,7 +46,24 @@
 
         // Apply the initial theme based on the value of the hidden input
         const applyTheme = (theme) => {
+            const navbarTheme = document.getElementById("navbar");
+            const navbar_titleTheme = document.getElementById("navbar_title");
+            const partial_footerTheme = document.getElementById("partial_footer");
+            const nav_linkTheme = document.getElementsByClassName("nav-link2");
+            const navbar_gearTheme = document.getElementById("navbar_gear");
+            if (theme == "dark") {
+                navbar_gearTheme.setAttribute("fill", "#f5acc6");
+            }
+            else {
+                navbar_gearTheme.setAttribute("fill", "#392d31");
+            }
             document.body.className = theme === "dark" ? "dark-mode" : "light-mode";
+            navbarTheme.className = theme === "dark" ? "dark-mode" : "light-mode";
+            partial_footerTheme.classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            navbar_titleTheme.classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            for (let i = 0; i < nav_linkTheme.length; i++) {
+                nav_linkTheme[i].classList.toggle(theme === "dark" ? "dark-mode" : "light-mode");
+            }
         };
 
         // Initialize theme on page load
